manifests/things/influxdb/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: influxdb
  namespace: things
  labels:
    app: influxdb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - image: influxdb:1.1-alpine
        name: influxdb
        ports:
        - name: api
          containerPort: 8086
        # - name: admin
        #   containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /etc/influxdb
        - name: data
          mountPath: /var/lib/influxdb
      volumes:
      - name: config
        configMap:
          name: influxdb
      - name: data
        hostPath:
          path: /srv/influxdb-data
