manifests/things/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: things
  labels:
    app: influxdb
spec:
  ports:
  - name: api
    port: 8086
    targetPort: api
  selector:
    app: influxdb
